course category gap issue fixed

--- a/assets/tutor-shewa-elementor.css
+++ b/assets/tutor-shewa-elementor.css
@@ -2,6 +2,9 @@
 .elementor-layout-up .tutor-course-level >div {
 	display: block;
 }
+.elementor-layout-left .tutor-course-level >div {
+	display: inline-block;
+}
 
 /*social share*/
 .etlms-social{
@@ -114,6 +117,10 @@
 	.elementor-layout--tabletup .tutor-course-level >div {
 		display: block;
 	}	
+	.elementor-layout--tabletleft .tutor-course-level >div {
+		display: inline-block;
+
+	}	
 	.elementor-align--tabletleft .tutor-course-level{
 		text-align: left;
 	}	
@@ -127,7 +134,10 @@
 
 	.elementor-layout--tabletup .etlms-single-course-meta-categories a{
 		display: block ;
-	}
+	}	
+	.elementor-layout--tabletleft .etlms-single-course-meta-categories a{
+		display: inline-block ;
+	}	
 	.elementor-align--tabletleft .etlms-single-course-meta-categories
 	{
 		text-align: left;
@@ -164,6 +174,9 @@
 	.elementor-layout--mobileup .tutor-course-level >div {
 		display: block;
 	}	
+	.elementor-layout--mobileleft .tutor-course-level >div {
+		display: inline-block;
+	}	
 
 	.elementor-align--mobileleft .tutor-course-level{
 		text-align: left;
@@ -175,12 +188,11 @@
 		text-align: center;
 	}	
 	/*course category*/
-
+	.elementor-layout--mobileup .etlms-single-course-meta-categories a{
+		display: block ;
+	}	
 	.elementor-layout--mobileleft .etlms-single-course-meta-categories a{
-		float: left;
-	}
-	.elementor-layout--mobileup .etmls-single-course-meta-duration li{
-		display: block;
+		display: inline-block ;
 	}		
 	.elementor-align--mobileleft .etlms-single-course-meta-categories
 	{
